try overflow-x/y combo to solve for at-mentions popup disappearing

--- a/shared/ui/styles/codemarks.less
+++ b/shared/ui/styles/codemarks.less
@@ -141,7 +141,8 @@
 		height: auto;
 		box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 		flex: auto;
-		// overflow: hidden;
+		overflow-x: hidden;
+		overflow-y: auto;
 
 		.assignees {
 			// float: right;
